--- a/crds/base/api-gateway/kustomization.yaml
+++ b/crds/base/api-gateway/kustomization.yaml
@@ -2,6 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - api-gateway
-  - cert-manager
-  - prometheus-operator
+  - experimental
