--- a/syncs/base/metrics-system.yaml
+++ b/syncs/base/metrics-system.yaml
@@ -1,13 +1,13 @@
 apiVersion: configsync.gke.io/v1beta1
 kind: RootSync
 metadata:
-  name: metric-system
+  name: metrics-system
   namespace: config-management-system
 spec:
   sourceFormat: unstructured
   sourceType: git
   git:
     branch: main
-    dir: metric-system/base
+    dir: metrics-system/base
     repo: https://github.com/johnjcool/kpt-bootstrap
     auth: none
