--- a/system-upgrade/base/system-upgrade-controller.yaml
+++ b/system-upgrade/base/system-upgrade-controller.yaml
@@ -104,29 +104,36 @@ spec:
                 fieldRef:
                   fieldPath: metadata.namespace
           volumeMounts:
-#            - name: etc-ssl
-#              mountPath: /etc/ssl
-#              readOnly: true
-#            - name: etc-pki
-#              mountPath: /etc/pki
-#              readOnly: true
-#            - name: etc-ca-certificates
-#              mountPath: /etc/ca-certificates
-#              readOnly: true
+            - name: etc-ssl
+              mountPath: /etc/ssl
+              readOnly: true
+            - name: etc-pki
+              mountPath: /etc/pki
+              readOnly: true
+            - name: etc-ca-certificates
+              mountPath: /etc/ca-certificates
+              readOnly: true
+            - name: var-lib-ca-certificates
+              mountPath: /var/lib/ca-certificates
+              readOnly: true
             - name: tmp
               mountPath: /tmp
       volumes:
-#        - name: etc-ssl
-#          hostPath:
-#            path: /etc/ssl
-#            type: DirectoryOrCreate
-#        - name: etc-pki
-#          hostPath:
-#            path: /etc/pki
-#            type: DirectoryOrCreate
-#        - name: etc-ca-certificates
-#          hostPath:
-#            path: /etc/ca-certificates
-#            type: DirectoryOrCreate
+        - name: etc-ssl
+          hostPath:
+            path: /etc/ssl
+            type: DirectoryOrCreate
+        - name: etc-pki
+          hostPath:
+            path: /etc/pki
+            type: DirectoryOrCreate
+        - name: etc-ca-certificates
+          hostPath:
+            path: /etc/ca-certificates
+            type: DirectoryOrCreate
+        - name: var-lib-ca-certificates
+          hostPath:
+            path: /var/lib/ca-certificates
+            type: Directory
         - name: tmp
           emptyDir: {}
