--- a/metrics-system/base/helm/values.yaml
+++ b/metrics-system/base/helm/values.yaml
@@ -6,3 +6,18 @@ grafana:
 
 kubeEtcd:
   enabled: false
+
+prometheus:
+  prometheusSpec:
+    podMonitorNamespaceSelector:
+      any: true
+    podMonitorSelector: {}
+    podMonitorSelectorNilUsesHelmValues: false
+    ruleNamespaceSelector:
+      any: true
+    ruleSelector: {}
+    ruleSelectorNilUsesHelmValues: false
+    serviceMonitorNamespaceSelector:
+      any: true
+    serviceMonitorSelector: {}
+    serviceMonitorSelectorNilUsesHelmValues: false
