--- a/system-upgrade/base/k3s/agent.yaml
+++ b/system-upgrade/base/k3s/agent.yaml
@@ -13,7 +13,7 @@ spec:
   prepare:
     args:
       - prepare
-      - control-plan
+      - control-plane-plan
     image: rancher/k3s-upgrade
   serviceAccountName: system-upgrade
   upgrade:
